# lib/api-spec/openapi.yaml
@@ -676,6 +676,11 @@ components:
         propertyImage:
           type: string
           nullable: true
+        propertyImages:
+          type: array
+          items:
+            type: string
+          nullable: true
         propertyType:
           type: string
           nullable: true
